--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -181,7 +181,7 @@ div.menu nav li:last-child{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #414a4f;
+	/*background-color: #414a4f;*/
 	opacity: 0.75;
 }
 
